--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="search_hint">Search for Artists</string>
+    <string name="title_activity_top_tracks">TopTracksActivity</string>
+    <string name="title_activity_track">TrackActivity</string>
 </resources>
